# n_body_lab

./: CMakeLists.txt  hw.docx  ~$hw.docx  ~$с_белогрудов.docx  срс_белогрудов.docx  срс_белогрудов_new.docx
advisor/srs/: srs.advixeproj
advisor/srs/e000/: callstacks.def  e000.advixeexp  roofline.data  roofline_int.data  settings.xml
advisor/srs/e000/hs005/: hs005.advixe  issues.xml  metrics.advisum  recommendations.advisum  threading.advisum  vectorization.advisum
advisor/srs/e000/st001/: st001.advixe  suitability.adviso  summary.advisum
advisor/srs/e000/trc000/: trc000.advixe
getor/: CMakeLists.txt  getor.cpp  getor_euler.cpp  getor_trap.cpp  getor_v4_omp.cpp
inspector/srs/: srs.inspxeproj
inspector/srs/r000ti1/: r000ti1.inspxe
inspector/srs/r000ti1/config/: context_values.cfg  runtc.options
inspector/srs/r000ti1/data.0/: getor.pdr  getor.pdr.db3  getor.pdr_bak  inspxe-runtc.txt
inspector/srs/r001mi1/: r001mi1.inspxe
inspector/srs/r001mi1/config/: context_values.cfg  runmc.options
inspector/srs/r001mi1/data.0/: getor_16372.pdr  getor_16372.pdr.db3  getor_16372.pdr_bak  inspxe-runmc.txt
inspector/srs/r002ti3/: inspxe-runtc.txt  r002ti3.inspxe
inspector/srs/r002ti3/config/: collection.cfg  context_values.cfg  runtc.options
inspector/srs/r002ti3/data.0/: getor.pdr.db3  getor.pdr_bak  getor.pdr_out  inspxe-runtc.txt
inspector/srs/r003ti3/: inspxe-runtc.txt  r003ti3.inspxe
inspector/srs/r003ti3/config/: runtc.options
inspector/srs/r004ti3/: r004ti3.inspxe
inspector/srs/r005ti3/: r005ti3.inspxe
vtune/srs/: srs.vtuneproj
(+139 files in other folders)
